--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,12 +1,14 @@
 {
-    "version": "0.1.0",
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+    "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch localhost",
             "type": "chrome",
             "request": "launch",
-            "port": 9222,
-            "url": "http://localhost:9222/index.html",
+            "name": "Launch Chrome against localhost",
+            "url": "http://localhost:5050",
             "webRoot": "${workspaceFolder}/ui"
         }
     ]
